--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.7
 Django==3.0.5
-django-crispy-forms==1.9.0
+django-crispy-forms==1.11.2
+crispy-tailwind==0.5.0
 Pillow==9.0.0
 pytz==2019.3
 sqlparse==0.3.1
